Details
-
Bug
-
Resolution: Fixed
-
Minor
Description
If the SpecialPollInterval value in the registry is not present (or 0), the service will use a value of 0, which means it will be constantly polling the server. This is not a reasonable default (and probably should not be allowed even if specified explicitly).
https://blogs.msdn.microsoft.com/w32time/2008/02/26/configuring-the-time-service-ntpserver-and-specialpollinterval/ explains that the default is "a floating interval", however it's probably sufficient for ROS to simply choose a bigger interval for now, e.g. a day or a week.
Attachments
Issue Links
- relates to
-
CORE-13001 Cannot assign the server time synchronization.
-
- Resolved
-